--- a/10-Variance-I.Rmd
+++ b/10-Variance-I.Rmd
@@ -521,7 +521,7 @@ if (exists("assignment2"))
       'S-BIOG-027' = !"A08Ga_{YY}M_human_health", 
       'S-BIOG-921' = !"A08Ga_{YY}C_human_health"),
     course.urls = c(
-      'S-BIOG-027' = "https://classroom.github.com/g/...", 
+      'S-BIOG-027' = "https://classroom.github.com/a/Ff0IwHCb", 
       'S-BIOG-921' = "https://classroom.github.com/g/..."),
     course.starts = c(
       'S-BIOG-027' = !"{W[29]+1} 13:00:00"),
@@ -541,7 +541,7 @@ if (exists("assignment2"))
       'S-BIOG-027' = !"A03Ga_{YY}M_urchin", # TODO: how to account it in Q2???
       'S-BIOG-921' = !"A03Ga_{YY}C_urchin"),
     course.urls = c(
-      'S-BIOG-027' = "https://classroom.github.com/g/...", 
+      'S-BIOG-027' = "ttps://classroom.github.com/a/FB5UbPvX", 
       'S-BIOG-921' = "https://classroom.github.com/g/..."),
     course.starts = c(
       'S-BIOG-027' = !"{W[29]+1} 13:00:00"),
