--- a/12-Correlation.Rmd
+++ b/12-Correlation.Rmd
@@ -445,7 +445,7 @@ if (exists("assignment2"))
       'S-BIOG-027' = !"A08Ga_{YY}M_human_health", 
       'S-BIOG-921' = !"A08Ga_{YY}C_human_health"),
     course.urls = c(
-      'S-BIOG-027' = "https://classroom.github.com/g/...", 
+      'S-BIOG-027' = "https://classroom.github.com/a/Ff0IwHCb", 
       'S-BIOG-921' = "https://classroom.github.com/g/..."),
     course.starts = c(
       'S-BIOG-027' = !"{W[35]+1} 13:00:00"),
